# multiscreencap

./: .gitignore  Cargo.toml  Info.plist  build.rs
src/: audio.rs  ffmpeg.rs  macos.rs  main.rs  recorder.rs  window.rs
