[package]
name = "screencast"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] }

tokio = { version = "1.39", features = ["rt-multi-thread", "process", "macros", "sync", "time"] }
which = "6"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# macOS window enumeration and image handling
core-graphics = { version = "0.23", features = ["highsierra"] }
core-foundation = "0.9"
core-foundation-sys = "0.8"
objc = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }

crossbeam-channel = "0.5"
parking_lot = "0.12"
rayon = "1.10"
sanitize-filename = "0.5"

[build-dependencies]
cc = "1.1"

[[bin]]
name = "screencast"
path = "src/main.rs"

[package.metadata.macos]
info-plist = "Info.plist"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

